--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
-  <!-- 
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
-  <link rel="stylesheet" href="/css/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
-  <link rel="stylesheet" href="/css/application.css">
-
+  <meta charset="utf-8">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="/css/styles.css" rel="stylesheet" media="screen">
   <script src="/js/application.js"></script>
-
-  <title></title>
-</head>
+  <title>Arabic Verb Conjugator</title>
 <body>
   <%= yield %>
 </body>
 </html>
+
