--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
-  <link href="/css/styles.css" rel="stylesheet" media="screen">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link href="/css/application.css" rel="stylesheet" media="screen">
   <script src="/js/application.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <title>Arabic Verb Conjugator</title>
 <body>
   <%= yield %>
