Add styling for mobile and desktop

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,7 +4,7 @@
     <h1>Arabic Verb Conjugator</h1>
   </header>
 
-  <div class="row">
+  <div class="row form-container">
     <form id="conj-form">
 
       <div class="form-row">
