Remove unneeded files Add footer

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -74,5 +74,10 @@
 
   <div id="result" class="text-center">
   </div>
+
+  <footer>
+    <h5>Created by <a href="http://www.annewillborn.com">Anne Willborn</a></h5>
+  </footer>
+
 </div>
 
